# punjabi_datagen

./: .gitignore  README.md  duration.py  main.py  mp3_to_wav.py  pyproject.toml
datagen/: datagen.py
downloader/: download.txt  downloaded.txt  downloader.py  other.txt
downloader/subtitles/: Cn3G5VbMfYs.json  SFvHfG5ZAdE.json  _El-tswm5s8.json  r5weuSWqDP8.json
downloader2/: downloaded.txt  downloader.py
